Integrate TicTacToe and use endpoints.CurrentUser.
- import tictactoe package from
  https://github.com/crhym3/go-tictactoe/tictactoe
- use endpoints.CurrentUser to get the user associated with a request

TicTacToe game will be available at http://host/tictactoe URL.
Live version is already being hosted at
https://go-endpoints.appspot.com/tictactoe

NOTE: wait to merge this with master 'till
      https://github.com/crhym3/go-endpoints/issues/2 and
      https://github.com/crhym3/go-endpoints/issues/6
      are closed and merged with their master.

--- a/app.yaml
+++ b/app.yaml
@@ -6,9 +6,21 @@ runtime: go
 api_version: go1
 
 handlers:
+# static assets
+- url: /favicon\.ico
+  static_files: static/favicon.ico
+  upload: favicon\.ico
+  mime_type: image/png
+- url: /(js|css|images)/(.+)
+  static_files: static/\1/\2
+  upload: static/(js|css|images)/.*
+- url: /tictactoe
+  static_files: templates/tictactoe.html
+  upload: templates/tictactoe\.html
+# Go app
 - url: /.*
   secure: always
   script: _go_app
-
+# Endpoints handler
 - url: /_ah/spi/.*
   script: _go_app
