A little more fancier homepage which renders README.md from github/crhym3/go-endpoints.
Don't forget to go get github.com/russross/blackfriday for markdown
rendering.

--- a/app.yaml
+++ b/app.yaml
@@ -17,6 +17,7 @@ handlers:
 - url: /tictactoe
   static_files: templates/tictactoe.html
   upload: templates/tictactoe\.html
+  secure: always
 # Go app
 - url: /.*
   secure: always
