--- a/app.yaml
+++ b/app.yaml
@@ -9,8 +9,8 @@ handlers:
 # static assets
 - url: /favicon\.ico
   static_files: static/favicon.ico
-  upload: favicon\.ico
-  mime_type: image/png
+  upload: static/favicon\.ico
+  mime_type: image/x-icon
 - url: /(js|css|images)/(.+)
   static_files: static/\1/\2
   upload: static/(js|css|images)/.*
